# ijkplayer-android

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/tv/danmaku/ijk/media/player/ijkplayer_android/: MainActivity.java  MeasureHelper.java
ijkplayer-sdk/: CMakeLists.txt  build.gradle
ijkplayer-sdk/src/main/cpp/android-ndk-profiler/jni/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/ijkj4a/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/ijkplayer/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/ijksdl/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/ijksdl/android/: android_nativewindow.c
ijkplayer-sdk/src/main/cpp/ijkmedia/ijksoundtouch/: CMakeLists.txt
ijkplayer-sdk/src/main/cpp/ijkmedia/ijkyuv/: CMakeLists.txt
ijkplayer-sdk/src/main/jniLibs/armeabi-v7a/include/libffmpeg/: config.h
